[tool.poetry]
name = "example_webserver"
version = "0.1.0"
description = "An example async webserver for demonstration purposes"
authors = ["Lucas Sonnabend"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14.2"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
